[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.6
namespace_packages = true
plugins = ["mypy_zope:plugin"]
allow_redefinition = true
mypy_path = ["$MYPY_CONFIG_FILE_DIR/stubs"]

[[tool.mypy.overrides]]
module = ["win32con", "win32api", "win32file", "win32process", "win32event", "winerror"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["GeoIP", "pygeoip"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["pytest", "pytest_twisted"]
ignore_missing_imports = true
